Issue #463160 by alberto56 | SocialNicheGuru: Added Avoid Grey map background on IE & FF by forcing .gmap img max-width none.

--- a/gmap.css
+++ b/gmap.css
@@ -61,3 +61,7 @@
   color: grey;
 }
 
+/* IE and FF will display the map as a grey box if max-width is set to 100% for img tag within .gmap. */
+.gmap img {
+  max-width: none #important;
+}
